fix: fix @link tags in javadoc for record fields